# document-embedding

./: README.md  embedder.py  pyproject.toml  test_embedder.py
.github/workflows/: publish.yml
sentence_embedder/: __init__.py  cache.py  embedder.py
sentence_embedder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
