[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sentence-embedder"
version = "1.0.0"
description = "Lightweight Python library for sentence/semantic embeddings — SentenceTransformers & OpenAI in one unified API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = [
    "embeddings", "nlp", "sentence-transformers",
    "semantic-search", "openai", "machine-learning"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/your-org/sentence-embedder"
Repository = "https://github.com/your-org/sentence-embedder"
"Bug Tracker" = "https://github.com/your-org/sentence-embedder/issues"
Changelog = "https://github.com/your-org/sentence-embedder/blob/main/CHANGELOG.md"

[project.optional-dependencies]
st     = ["sentence-transformers>=2.7"]
openai = ["openai>=1.0"]
all    = ["sentence-transformers>=2.7", "openai>=1.0"]
dev    = ["pytest>=7", "pytest-cov", "ruff", "mypy", "build", "twine"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["sentence_embedder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 88
target-version = "py310"

[tool.mypy]
python_version      = "3.10"
strict              = false
ignore_missing_imports = true
